# Feature_Tests

./: .gitignore  CleanAll.py  CleanAll.sh  README.md
Crossplatform/Python/: .gitignore
Crossplatform/Qt/: clean.sh
Crossplatform/SFINAE/: .gitignore  Build.py  README  main.cpp
Crossplatform/any-cast/: .gitignore  Build.py  Clean.py  README  main.cpp  makefile
Crossplatform/bash/: shell.sh
Crossplatform/c++next/: .gitignore  Build.py  Defines.py  README
Crossplatform/container/: .gitignore  Build.py  README  main.cpp  makefile
Crossplatform/cpp11/: Clean.py  README  build.sh  clean.sh  cpp11.files  defs.sh  makefile  mkp.sh  run.sh
Crossplatform/curiously-recurring-template-pattern/: .gitignore  Build.py  Clean.py  README  main.cpp  makefile  run.sh
Crossplatform/exit/: .gitignore  Build.py  Clean.py  README  main.cpp  makefile  run.sh
Crossplatform/leak/: .gitignore  Build.py  README  main.cpp  makefile  run.sh
Crossplatform/locale/: .gitignore  Build.py  README  clean.sh  main.cpp  makefile
Crossplatform/log10/: .gitignore  Build.py  README  main.cpp  makefile  out.cpp
Crossplatform/move-C++98/: .gitignore  Build.py  QtCr.move.files  QtCr.move.includes  README  header.h  main.cpp  makefile  run.sh
Crossplatform/multi-thread-make/: Build.py  README  build.sh  file1.cpp  file2.cpp  file3.cpp  file4.cpp  file5.cpp  file6.cpp  file7.cpp  file8.cpp  main.cpp  makefile
Crossplatform/multicast/: README  client.c  makefile  runs.sh  runс.sh  server.c
Crossplatform/observer/: Build.py  (+5 more)
Linux/autohell/: Makefile.am  build.sh  clean.sh  configure.ac
(+593 files in other folders)
